# kitaru

./: .dockerignore  .env.example  .gitignore  .lycheeignore  .typos.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GETTING_STARTED.md  Justfile  README.md  SECURITY.md  lychee.toml  pyproject.toml  wrangler.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/skills/kitaru-authoring/: SKILL.md
.claude-plugin/skills/kitaru-scoping/: SKILL.md
.claude/skills/kitaru-authoring/: SKILL.md
.claude/skills/r2-image-upload/: SKILL.md
.github/: dependabot.yml  pull_request_template.md  teams.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  image-optimiser.yml  publish_helm_chart.yml  release.yml  site.yml  spellcheck.yml
docker/: CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.server-dev  TESTING.md  entrypoint.sh
docs/: .gitignore  CLAUDE.md  README.md  mdx-components.tsx  next.config.mjs  package.json  pnpm-lock.yaml  source.config.ts
docs/app/: global.css  layout.tsx  not-found.tsx  robots.ts  sitemap.ts
docs/app/(docs)/: layout.tsx
docs/components/: provider.tsx  search.tsx
docs/content/docs/: changelog.mdx  contributing.mdx  index.mdx  meta.json
docs/lib/: layout.shared.tsx  source.ts
docs/public/: _redirects
docs/scripts/: convert-sdk-docs.mjs
examples/: README.md  __init__.py  client_execution_management.py  dapr_hello.py  first_working_flow.py  flow_with_artifacts.py  flow_with_configuration.py  flow_with_llm.py  flow_with_logging.py  mcp_query_tools.py  monty_sandbox.py  pydantic_ai_adapter.py  replay_with_overrides.py  wait_and_resume.py
examples/basic_flow/: README.md  __init__.py  first_working_flow.py  flow_with_artifacts.py  flow_with_checkpoint_runtime.py  flow_with_configuration.py  flow_with_logging.py
examples/coding-agent/: README.md  flow.py  utils.py
examples/coding_agent/: README.md  agent.py  agent_memory.py  flow.py  llm.py  materializers.py  models.py  prompts.py  skills.py  tools.py  utils.py
examples/coding_agent_basic/: Dockerfile  README.md  flow.py  llm.py  materializers.py  tools.py
examples/coding_agent_basic/agents/: __init__.py  implementer.py  planner.py  solver.py
examples/durable_harness/: README.md  harness.py  models.py  prompts.py
examples/execution_management/: README.md  __init__.py  client_execution_management.py  wait_and_resume.py
examples/llm/: README.md  __init__.py  flow_with_llm.py
examples/mcp/: README.md  __init__.py  mcp_query_tools.py
examples/memory/: DEMO_PLAYBOOK.md  README.md  __init__.py  flow_with_memory.py
examples/pydantic_ai_agent/: README.md  __init__.py  pydantic_ai_adapter.py
examples/replay/: README.md  __init__.py  replay_with_overrides.py
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: NOTES.txt
scripts/: download-ui.sh  generate_changelog_docs.py  generate_cli_docs.py  generate_sdk_docs.py  merge_site.sh  r2-upload.py  smoke-test.sh
site/: astro.config.mjs  package.json  pnpm-lock.yaml
site/public/: robots.txt
site/public/blog/: agents-are-not-microservices.avif  agents-need-more-than-traces.avif  anatomy-of-a-production-agent.avif  from-pipelines-to-agents.avif  from-zenml-to-kitaru.avif  no-journal-replay.avif  why-agents-need-durable-execution.avif
site/src/: content.config.ts
site/src/components/: AgentNative.astro  Architecture.astro  CalEmbed.astro  CodeShowcase.astro  CodingAgent.astro  Credibility.astro  Cta.astro  Dashboard.astro  DeployTargets.astro  Features.astro  Footer.astro  Hero.astro  HowItWorks.astro  Lifecycle.astro  Memory.astro  Nav.astro  (+9 more)
spec/: 01-overview.md  02-execution-model.md  03-mvp-scope-and-platform-direction.md  04-connection-stacks-and-configuration.md  05-kitaru-flow.md  06-kitaru-checkpoint.md  07-kitaru-wait.md  08-kitaru-llm.md  09-artifacts-metadata-and-logging.md  1-overview.md  10-replay-and-overrides.md  11-per-flow-and-per-checkpoint-overrides.md  12-error-handling.md  13-client-api.md  14-cli-reference.md  15-observability.md  16-framework-adapters.md  17-end-to-end-examples.md  18-appendix-glossary.md  19-implementation-guide.md  2-execution-model.md  20-agent-native-integrations.md  21-notes_for_future_work.md  22-configuration-and-setup.md  23-completed-future-work.md  24-consolidated-roadmap.md  25-environment-variables.md  3-mvp-scope-and-platform-direction.md  4-connection-stacks-and-configuration.md  5-kitaru-flow.md  6-kitaru-checkpoint.md  7-kitaru-wait.md  plan.md
src/: _kitaru_bootstrap.py  _kitaru_env.py
src/kitaru/: __init__.py  _cleanup.py  _env.py  _flow_loading.py  _interface_errors.py  _interface_executions.py  _interface_memory.py  _interface_stacks.py  _local_server.py  _safe_save.py  _scope.py  _source_aliases.py  _terminal_logging.py  _version.py  analytics.py  artifacts.py  checkpoint.py  cli.py  cli_output.py  client.py  config.py  errors.py  flow.py  futures.py  inspection.py  llm.py  logging.py  memory.py  replay.py  runtime.py  sandbox.py  terminal.py  wait.py
src/kitaru_init_hook/: __init__.py
tests/: AGENTS.md  CLAUDE.md  _dapr_fakes.py  _dapr_harness.py  conftest.py  test_analytics.py  test_artifacts.py  test_bootstrap.py  test_checkpoint.py  test_cli.py  test_client.py  test_config.py  test_dapr_backend.py  test_dapr_client.py  test_dapr_interpreter.py  test_dapr_phase12_integration.py  test_dapr_runtime_host.py  test_dapr_store.py  test_dockerfile_contract.py  test_engine_registry.py  test_flow.py  test_futures.py  test_generate_cli_docs.py  test_generate_sdk_docs.py  test_inspection.py  test_interface_errors.py  test_interface_memory.py  test_kitaru.py  test_llm.py  test_local_server.py  test_local_server_ui_patch.py  test_logging.py  test_mcp_import_guard.py  test_memory.py  test_phase10_configuration_example.py  test_phase11_client_example.py  test_phase12_llm_example.py  test_phase15_wait_example.py  test_phase15_wait_example_unit.py  test_phase16_replay_example.py  (+17 more)
tests/mcp/: __init__.py  conftest.py  test_phase19_mcp_example.py  test_server.py
(+174 files in other folders)
