[project]
name = "kitaru"
version = "0.1.0"
description = "Durable execution for AI agents, built on ZenML"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "ZenML GmbH", email = "info@zenml.io" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cyclopts>=3.0",
    "litellm>=1.75.0",
    "pydantic>=2.0",
    "rich>=12.0.0",
    # TODO: revert to "zenml>=0.94.0" once feature/pause-pipeline-runs is merged and released
    "zenml[local] @ git+https://github.com/zenml-io/zenml.git@feature/pause-pipeline-runs",
]

[project.optional-dependencies]
local = [
    "zenml[local]>=0.94.0",
]
pydantic-ai = [
    "pydantic-ai-slim>=0.2.0",
]

[project.scripts]
kitaru = "kitaru.cli:cli"

[project.urls]
Homepage = "https://kitaru.ai"
Repository = "https://github.com/zenml-io/kitaru"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# TODO: remove this section once the zenml git dependency is reverted to a PyPI release
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kitaru"]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "ty>=0.0.1a7",
    "yamlfix",
    "zenml[local]>=0.94.0",
    "pytest>=8.0",
    "pytest-randomly",
    "pytest-clarity",
    "pytest-xdist[psutil]",
    "griffe>=1.13.0,<2.0.0",
    "griffe-typingdoc>=0.2.8,<1.0.0",
    "pydantic-ai-slim>=0.2.0",
]

[tool.ruff]
target-version = "py312"
src = ["src", "scripts", "tests"]
line-length = 88
exclude= [
    ".git",
    ".ruff_cache",
    ".venv"
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade (enforces modern type annotations)
    "B",    # bugbear
    "SIM",  # simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["kitaru"]

[tool.ty.environment]
python-version = "3.12"
root = ["src", "scripts", "."]

[[tool.ty.overrides]]
include = ["scripts/generate_sdk_docs.py"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv -n auto"
pythonpath = ["scripts"]
