[project]
name = "kitaru"
version = "0.3.2"
description = "Durable execution for AI agents, built on ZenML"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "ZenML GmbH", email = "info@zenml.io" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = [
    "ai-agents",
    "durable-execution",
    "workflow",
    "orchestration",
    "checkpoints",
    "replay",
    "llm",
    "mlops",
    "pydantic",
    "observability",
]
dependencies = [
    "cyclopts>=3.0",
    "pydantic>=2.0",
    "rich>=12.0.0",
    "zenml[local]>=0.94.1",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0,<2",
]
anthropic = [
    "anthropic>=0.40.0,<1",
]
llm = [
    "kitaru[openai]",
    "kitaru[anthropic]",
]
local = [
    "zenml[server]>=0.94.1",
]
pydantic-ai = [
    "pydantic-ai-slim>=1.75.0",
]
mcp = [
    "mcp>=1.19.0,<1.20.0",
]

[project.scripts]
kitaru = "kitaru.cli:cli"
kitaru-mcp = "kitaru.mcp:main"

[project.entry-points."zenml.init_hooks"]
kitaru = "kitaru_init_hook:init"

[project.urls]
Homepage = "https://kitaru.ai"
Repository = "https://github.com/zenml-io/kitaru"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = [
    "src/kitaru/_ui/dist/**",
    "src/kitaru/_ui/bundle_manifest.json",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kitaru", "src/kitaru_init_hook"]

[tool.uv]
exclude-newer = "3 days"

[dependency-groups]
dev = [
    "ruff>=0.11",
    "ty>=0.0.1a7",
    "yamlfix",
    "zenml[server]>=0.94.1",
    "pytest>=8.0",
    "pytest-randomly",
    "pytest-clarity",
    "pytest-xdist[psutil]",
    "griffe>=1.13.0,<2.0.0",
    "griffe-typingdoc>=0.2.8,<1.0.0",
    "pydantic-ai-slim>=1.75.0",
    "openai>=1.0.0,<2",
    "anthropic>=0.40.0,<1",
]

[tool.ruff]
target-version = "py311"
src = ["src", "scripts", "tests"]
line-length = 88
exclude= [
    ".git",
    ".ruff_cache",
    ".venv"
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade (enforces modern type annotations)
    "B",    # bugbear
    "SIM",  # simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["kitaru"]

[tool.ty.src]
exclude = ["examples/**"]

[tool.ty.environment]
python-version = "3.11"
root = ["src", "scripts", "."]

[[tool.ty.overrides]]
include = ["scripts/generate_sdk_docs.py"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"

[[tool.ty.overrides]]
include = ["scripts/r2-upload.py"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv -n auto"
pythonpath = ["scripts"]
